# bayes_posterior_symmetry_exploration

./: LICENSE  README.md  pyproject.toml
mmd/: mmd_torch.py
supplementary_materials/: README.md  data.ipynb  data.pt  permute.py  posterior.ipynb  requirements.txt  scale.py  training.ipynb  utils.py
symmetries/: __init__.py  layers.py  permutation.py  permutation_resnet.py  scale.py  scale_resnet.py  utils.py
